[gd_scene load_steps=16 format=3 uid="uid://xq0naemtpvqa"]

[ext_resource type="Texture2D" uid="uid://b7bakf1xgyypw" path="res://Sprites/Dice_battle_assets/die circle.png" id="1_5q77g"]
[ext_resource type="Script" path="res://Scripts/scene_scripts/dice_battle.gd" id="1_fecdh"]
[ext_resource type="Script" path="res://Scripts/dice_game/action_slot.gd" id="2_olh32"]
[ext_resource type="Script" path="res://Scripts/dice_game/dice_holder.gd" id="4_jibh3"]
[ext_resource type="Texture2D" uid="uid://cebow0jp0j4" path="res://icon.svg" id="5_1gupk"]
[ext_resource type="Script" path="res://Scripts/dice_game/player_ui.gd" id="5_vccpn"]
[ext_resource type="Theme" uid="uid://g7xlk0plmj00" path="res://Fonts/Themes/dice_game_ui.tres" id="6_7mrag"]
[ext_resource type="Texture2D" uid="uid://ba5fohkagawd8" path="res://Sprites/dice_game_ui/close X.png" id="6_acft5"]
[ext_resource type="Texture2D" uid="uid://cn3k5tjrtrevh" path="res://Sprites/dice_game_ui/heart.png" id="6_ayl21"]
[ext_resource type="Texture2D" uid="uid://ckef36t0aywc3" path="res://Sprites/dice_game_ui/download.png" id="7_0ngxd"]
[ext_resource type="Script" path="res://Scripts/dice_game/player_node.gd" id="7_6vodb"]
[ext_resource type="Script" path="res://Scripts/shop/shop_container.gd" id="7_72rp6"]
[ext_resource type="PackedScene" uid="uid://c21j8rpl4tpqr" path="res://Prefabs/game_ui/ui_item_desciption.tscn" id="13_vc105"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojoh0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_erbep"]

[node name="Dice_Battle" type="Node2D" node_paths=PackedStringArray("ui_item_description")]
script = ExtResource("1_fecdh")
ui_item_description = NodePath("ui_item_desciption")

[node name="game Visuals TEMP2" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -5.0
offset_right = 1158.0
offset_bottom = 647.0
color = Color(0.294118, 0.294118, 0.294118, 1)

[node name="action_slots" type="Node2D" parent="."]
position = Vector2(421, 464)
scale = Vector2(0.7, 0.7)

[node name="ui_slot_1" type="ColorRect" parent="action_slots"]
offset_left = 49.0
offset_top = 69.0
offset_right = 138.0
offset_bottom = 76.0

[node name="action_slot1" type="Area2D" parent="action_slots/ui_slot_1" groups=["dice_snap"]]
position = Vector2(43, -48)
script = ExtResource("2_olh32")

[node name="CollisionShape2D" type="CollisionShape2D" parent="action_slots/ui_slot_1/action_slot1"]
shape = SubResource("RectangleShape2D_ojoh0")

[node name="ui_slot_2" type="ColorRect" parent="action_slots"]
offset_left = 159.0
offset_top = 69.0
offset_right = 248.0
offset_bottom = 76.0

[node name="action_slot2" type="Area2D" parent="action_slots/ui_slot_2" groups=["dice_snap"]]
position = Vector2(43, -48)
script = ExtResource("2_olh32")

[node name="CollisionShape2D" type="CollisionShape2D" parent="action_slots/ui_slot_2/action_slot2"]
shape = SubResource("RectangleShape2D_ojoh0")

[node name="ui_slot_3" type="ColorRect" parent="action_slots"]
offset_left = 269.0
offset_top = 69.0
offset_right = 358.0
offset_bottom = 76.0

[node name="action_slot3" type="Area2D" parent="action_slots/ui_slot_3" groups=["dice_snap"]]
position = Vector2(43, -48)
script = ExtResource("2_olh32")

[node name="CollisionShape2D" type="CollisionShape2D" parent="action_slots/ui_slot_3/action_slot3"]
shape = SubResource("RectangleShape2D_ojoh0")

[node name="player_hand" type="Node2D" parent="."]
position = Vector2(369, 559)
scale = Vector2(0.7, 0.7)

[node name="slot_1" type="Sprite2D" parent="player_hand"]
position = Vector2(59.5, 60.5)
texture = ExtResource("1_5q77g")

[node name="dholder_hand" type="Area2D" parent="player_hand/slot_1" groups=["dice_snap"]]
script = ExtResource("4_jibh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hand/slot_1/dholder_hand"]
shape = SubResource("RectangleShape2D_erbep")

[node name="slot_2" type="Sprite2D" parent="player_hand"]
position = Vector2(169.5, 60.5)
texture = ExtResource("1_5q77g")

[node name="dholder_hand" type="Area2D" parent="player_hand/slot_2" groups=["dice_snap"]]
script = ExtResource("4_jibh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hand/slot_2/dholder_hand"]
shape = SubResource("RectangleShape2D_erbep")

[node name="slot_3" type="Sprite2D" parent="player_hand"]
position = Vector2(279.5, 60.5)
texture = ExtResource("1_5q77g")

[node name="dholder_hand" type="Area2D" parent="player_hand/slot_3" groups=["dice_snap"]]
script = ExtResource("4_jibh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hand/slot_3/dholder_hand"]
shape = SubResource("RectangleShape2D_erbep")

[node name="slot_4" type="Sprite2D" parent="player_hand"]
position = Vector2(389.5, 60.5)
texture = ExtResource("1_5q77g")

[node name="dholder_hand" type="Area2D" parent="player_hand/slot_4" groups=["dice_snap"]]
script = ExtResource("4_jibh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hand/slot_4/dholder_hand"]
shape = SubResource("RectangleShape2D_erbep")

[node name="slot_5" type="Sprite2D" parent="player_hand"]
position = Vector2(499.5, 60.5)
texture = ExtResource("1_5q77g")

[node name="dholder_hand" type="Area2D" parent="player_hand/slot_5" groups=["dice_snap"]]
script = ExtResource("4_jibh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hand/slot_5/dholder_hand"]
shape = SubResource("RectangleShape2D_erbep")

[node name="player_ui" type="Node2D" parent="."]
script = ExtResource("5_vccpn")

[node name="submit_button" type="Button" parent="player_ui"]
offset_left = 697.0
offset_top = 459.0
offset_right = 826.0
offset_bottom = 501.0
focus_mode = 0
theme = ExtResource("6_7mrag")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "SUBMIT"
flat = true

[node name="ui_damage" type="Button" parent="player_ui"]
offset_left = 280.0
offset_top = 471.0
offset_right = 461.0
offset_bottom = 521.0
focus_mode = 0
theme = ExtResource("6_7mrag")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "-"
flat = true

[node name="Label" type="Label" parent="player_ui/ui_damage"]
layout_mode = 0
offset_left = -7.0
offset_top = -36.0
offset_right = 184.0
offset_bottom = 9.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "damage"
horizontal_alignment = 1

[node name="item_button" type="Button" parent="player_ui"]
offset_left = 16.0
offset_top = 459.0
offset_right = 145.0
offset_bottom = 501.0
focus_mode = 0
theme = ExtResource("6_7mrag")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Items"
flat = true

[node name="item_background" type="ColorRect" parent="player_ui"]
visible = false
offset_left = 18.0
offset_top = 455.0
offset_right = 304.0
offset_bottom = 619.0

[node name="battle_item_container" type="GridContainer" parent="player_ui/item_background"]
layout_mode = 0
offset_top = 1.0
offset_right = 286.0
offset_bottom = 165.0
script = ExtResource("7_72rp6")
trade_side = "battle"

[node name="item_close" type="Button" parent="player_ui/item_background"]
layout_mode = 0
offset_left = 251.0
offset_top = 7.0
offset_right = 481.0
offset_bottom = 242.0
scale = Vector2(0.13, 0.13)
theme = ExtResource("6_7mrag")
icon = ExtResource("6_acft5")
flat = true

[node name="enemy_spawns" type="Node2D" parent="."]

[node name="enemy_spawn1" type="Node2D" parent="enemy_spawns"]
position = Vector2(739, 213)

[node name="enemy_spawn2" type="Node2D" parent="enemy_spawns"]
position = Vector2(978, 324)

[node name="enemy_spawn3" type="Node2D" parent="enemy_spawns"]
position = Vector2(978, 100)

[node name="dice_layer" type="Node2D" parent="."]

[node name="game Visuals TEMP" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -5.0
offset_right = 1158.0
offset_bottom = 435.0
color = Color(0.521569, 0.337255, 1, 1)

[node name="enemy_layer" type="Node2D" parent="."]

[node name="player_layer" type="Node2D" parent="."]
position = Vector2(177, 280)

[node name="player" type="Sprite2D" parent="player_layer" node_paths=PackedStringArray("master")]
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_1gupk")
script = ExtResource("7_6vodb")
master = NodePath("../..")

[node name="VBoxContainer" type="VBoxContainer" parent="player_layer/player"]
offset_left = -134.286
offset_top = -77.1429
offset_right = -55.2857
offset_bottom = 98.8571
scale = Vector2(0.85, 0.85)

[node name="ui_hp" type="TextureRect" parent="player_layer/player/VBoxContainer"]
layout_mode = 2
texture = ExtResource("6_ayl21")

[node name="ui_text" type="Label" parent="player_layer/player/VBoxContainer/ui_hp"]
layout_mode = 0
offset_left = -25.0
offset_top = 10.0
offset_right = 101.0
offset_bottom = 60.0
theme = ExtResource("6_7mrag")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "0"
horizontal_alignment = 1

[node name="ui_shield" type="TextureRect" parent="player_layer/player/VBoxContainer"]
layout_mode = 2
texture = ExtResource("7_0ngxd")

[node name="ui_text" type="Label" parent="player_layer/player/VBoxContainer/ui_shield"]
layout_mode = 0
offset_left = -43.0
offset_top = 26.0
offset_right = 120.0
offset_bottom = 76.0
theme = ExtResource("6_7mrag")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "0"
horizontal_alignment = 1

[node name="calc_hp" type="Label" parent="player_layer/player"]
offset_left = -162.857
offset_top = -120.0
offset_right = -36.8571
offset_bottom = -70.0
theme = ExtResource("6_7mrag")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "0"
horizontal_alignment = 1

[node name="calc_defend" type="Label" parent="player_layer/player"]
offset_left = -162.857
offset_top = 75.7143
offset_right = -36.8571
offset_bottom = 125.714
theme = ExtResource("6_7mrag")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "0"
horizontal_alignment = 1

[node name="status_conditions" type="GridContainer" parent="player_layer/player"]
offset_left = 67.1428
offset_top = -58.5714
offset_right = 172.143
offset_bottom = 103.429
columns = 2

[node name="ui_item_desciption" parent="." instance=ExtResource("13_vc105")]
visible = false
offset_left = 782.0
offset_top = 320.0
offset_right = 1294.0
offset_bottom = 776.0
scale = Vector2(0.7, 0.7)

[connection signal="button_down" from="player_ui/submit_button" to="." method="_on_submit_button_down"]
[connection signal="button_down" from="player_ui/item_button" to="player_ui" method="_on_item_button_button_down"]
[connection signal="button_down" from="player_ui/item_background/item_close" to="player_ui" method="_on_item_close_button_down"]
